; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_pmag-ba-fb.c_dac_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_pmag-ba-fb.c_dac_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmagbafb_par = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pmagbafb_par*, i32, i32)* @dac_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dac_write(%struct.pmagbafb_par* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.pmagbafb_par*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.pmagbafb_par* %0, %struct.pmagbafb_par** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.pmagbafb_par*, %struct.pmagbafb_par** %4, align 8
  %9 = getelementptr inbounds %struct.pmagbafb_par, %struct.pmagbafb_par* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = udiv i32 %11, 4
  %13 = zext i32 %12 to i64
  %14 = add nsw i64 %10, %13
  %15 = call i32 @writeb(i32 %7, i64 %14)
  ret void
}

declare dso_local i32 @writeb(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
